Fix spacing

--- a/app/assets/stylesheets/videos/index/videos.scss
+++ b/app/assets/stylesheets/videos/index/videos.scss
@@ -97,6 +97,10 @@
   flex-direction: column;
   gap: 4px;
   width: 100%;
+
+  &__item {
+    height: 24px;
+  }
 }
 
 .video-title {
